--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
-  "name": "projecrwt1",
-  "version": "1.0.0",
-  "description": "Node.js 교과서의 소스코드입니다.",
-  "main": "node_modules/index.js",
+  "name": "learn-sequelize",
+  "version": "0.0.1",
+  "description": "시퀄라이즈를 배우자",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon app"
   },
-  "keywords": [],
-  "author": "yw",
+  "author": "ZeroCho",
   "license": "MIT",
   "dependencies": {
-    "body-parser": "^1.19.0",
-    "cookie-parser": "^1.4.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "morgan": "^1.10.0",
+    "mysql2": "^2.1.0",
+    "nunjucks": "^3.2.2",
+    "sequelize": "^6.3.4",
+    "sequelize-cli": "^6.2.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.4"
   }
 }
